Minor bug fix Each team header overflowing out of mobile screen fixed. Font size for phones reduced from 4rem to 3rem to obtain the desired result.

--- a/client/styles/Team.module.css
+++ b/client/styles/Team.module.css
@@ -40,7 +40,7 @@
     margin-top: 2rem;
     display: flex;
     align-items: flex-start;
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: bold;
     padding-bottom: 2rem;
 
